<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_acerca_de"
    tools:context="com.zyxdimensions.petagram.Contacto"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/llNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imgNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_48"
            android:layout_gravity="center_vertical"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/contacto_nombre"
                android:ems="@string/contacto_ems"
                android:maxLength="15"
                android:textSize="@dimen/contacto_tamano_texto"
                android:layout_marginLeft="@dimen/contacto_margin_left"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/contacto_margin_top"
        >

        <ImageView
            android:id="@+id/imgCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_48"
            android:layout_gravity="center_vertical"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/contacto_correo"
                android:ems="@string/contacto_ems"
                android:textSize="@dimen/contacto_tamano_texto"
                android:layout_marginLeft="@dimen/contacto_margin_left"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/contacto_margin_top"
        >

        <ImageView
            android:id="@+id/imgMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/create_new_48"
            android:layout_gravity="center_vertical"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="8"
                android:hint="@string/contacto_mensaje"
                android:ems="@string/contacto_ems"
                android:textSize="@dimen/contacto_tamano_texto"
                android:layout_marginLeft="@dimen/contacto_margin_left"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto_boton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/contacto_margin_top"
        android:onClick="enviarComentario"
        />
</LinearLayout>
