<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvMascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margen_bottom_cardview"
    card_view:cardCornerRadius="@dimen/corner_radius_cardview"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/cat_48"
            android:contentDescription="@string/content_description"
            />
        <RelativeLayout
            android:id="@+id/rlContenedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/llContenedorMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentLeft="true"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dog_bone_48"
                    android:contentDescription="@string/content_description"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_mascota"
                    android:id="@+id/tvNombreMascota"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_left_textview"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"
                tools:ignore="RelativeOverlap,RtlHardcoded,UseCompoundDrawables">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad_raiting"
                    android:id="@+id/tvCantidadRaiting"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_left_textview"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/human_bone_48"
                    android:contentDescription="@string/content_description" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>